--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -163,9 +163,10 @@ it. When the tension in the plastic is great enough the turret begins to turn.
 This means that when the motor stops the plastic will untwist which makes the
 turret overturn. This means that the turret is very imprecise which makes it
 difficult to aim correctly. This could be compensated for in the software by
-calculating how much more the turret turns, but since this is difficult to
-measure and it is relative to how much force the motor applies it was deemed
-not worth the effort.\nl
+calculating how much more the turret turns due to the plastic stick twisting,
+but since this is difficult to measure and it is relative to how much force the motor applies it was deemed
+not worth the effort, when it could also be solved by having a gear between
+the motor and the turning mechanism.\nl
 
 The geared design is similar to the design with the turret directly connected to
 the gear that turns the turret, the difference being that the motor is placed on
