--- a/sections/Design/Design.tex
+++ b/sections/Design/Design.tex
@@ -1,8 +1,8 @@
 \chapter{Mechanical Design}
 
-In this chapter the tinkering process and the thoughts that went into the design
-of the turret will be discussed and the final design will be presented. The design of the target will
-also be also be discussed.
+This chapter describes how the lego was tinkered with and how this process
+lead to the design of the turret. The final design will be also be presented.
+Finally the thoughts that went into the design of the target will be discussed.
 
 \input{sections/Design/TurretDesign.tex}
 \input{sections/Design/TargetDesign.tex}
