--- a/sections/Design/Design.tex
+++ b/sections/Design/Design.tex
@@ -1,7 +1,7 @@
 \chapter{Mechanical Design}
 
 This chapter describes how the lego was tinkered with and how this process
-lead to the design of the turret. The final design will be also be presented.
+lead to the final design of the turret.
 Finally the thoughts that went into the design of the target will be discussed.
 
 \input{sections/Design/TurretDesign.tex}
