--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -139,7 +139,7 @@ target. For this purpose three designs were considered.
 \begin{itemize}
   \item A spiral gear design
   \item A direct connection design
-  \item A geared design
+  \item A gear design
 \end{itemize}
 
 In the spiral gear design a motor was placed beside the turret. This motor was
@@ -168,7 +168,7 @@ but since this is difficult to measure and it is relative to how much force the 
 not worth the effort, when it could also be solved by having a gear between
 the motor and the turning mechanism.\nl
 
-The geared design is similar to the design with the turret directly connected to
+The gear design is similar to the design with the turret directly connected to
 the gear that turns the turret, the difference being that the motor is placed on
 the outside of the base and the motor is geared which makes it more precise when
 stopping since it does not over turn as much as the design whitout a gear. 
