--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -43,7 +43,12 @@ ball launcher, two wheels placed side by side spinning in opposite directions, w
 tennis ball launcher design}{sketch}
 When trying to build this design it was determined that the available motors was
 not powerfull enough to deliver the necessary momentum for launching a
-projectile, not even with a gearing.\nl
+projectile, not even with a gearing. Another factor is that the wheels
+available was made of soft rubber, which absorbs a lot of the for when the
+projectile is pushed through. For this Design to work the best the wheels
+need to be made of a hard material that does not absorb the force from the
+motor and has a lot of friction, which makes it easier for the wheels to
+grip the projectile.\nl
 
 The piston design uses a piston that pushes the projectile
 trough a mouth piece that clamps around it. This means that until enough force
