- Re added a picture

--- a/sections/Sensors/Ultrasonic.tex
+++ b/sections/Sensors/Ultrasonic.tex
@@ -51,9 +51,9 @@ the wall. This wall is marked with a number of lines each representing a
 distance of 10cm from the turret's location. The target for this test is a
 rectangular cardboard cutout, which is used to hold a sheet of coloured paper
 which is folded around it. This setup can be seen in
-\autoref{SensorUltraSetup.JPG}.
+\autoref{SensorUltraSetup}.
 
-\figx[0.1]{SensorUltraSetup.JPG}{The test setup for testing the ultrasonic
+\figx[0.1]{SensorUltraSetup}{The test setup for testing the ultrasonic
 distance sensor.}
 
 \subsection{Ultrasonic Sensor Test - Placement}\label{UltraTestPlacement}
