--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -3,26 +3,26 @@
 As \name is an autonomous turret and needs to be able to hit a moving target,
 it needs to have some intelligence in order to determine how to position itself
 to hit the target. The turret can be considered intelligent
-\citep[ch.1.1]{MIBook} when its decisions are explainable by computations and
-its intelligence can be judged by:
+\citep[ch.1.1]{MIBook} when its decisions are explainable by computations.
+How intelligent can be judged by:
 
 \begin{enumerate}
   \item If what it does is appropriate to its circumstances and goals.
-  \item It is flexible to changing environments and changing goals.
-  \item It learns from experience.
-  \item It makes appropriate choices given its perceptual and computational
+  \item If it is flexible to changing environments and changing goals.
+  \item If it learns from experience.
+  \item If it makes appropriate choices given its perceptual and computational
   limits.
 \end{enumerate}
 %See MI book, chapter 1.1 p.4
 
-In order to be intelligent \namep needs to be able to represent its knowledge in
+In order to be intelligent \name needs to be able to represent its knowledge in
 a suitable way that allows it to work it into a suitable solution. 
 
 \subsection{Knowledge Representation}\label{KR}
 %See MI book chapter 1.4 p.12
 
-As \namep is a turret it needs to be able to convert the problem of hitting a
-moving target into a suitable representation. This representation can then be
+\name is a turret, it needs to be able to represent the problem of hitting a
+moving target as a suitable representation. This representation can then be
 computed into a suitable output which in turn can be interpreted as
 a solution, whether or not the target is actually hit. This can be seen in
 \autoref{MIRep}.
