--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -14,8 +14,8 @@ turret with a gear connected to the turning mechanism to make the whole turret
 turn. \fix{Add picture of the turret with arrows pointing to the various
 parts}{}
 
-In the following subsections the design process and arguments for each part will
-be presented.
+In the following subsections the design process and arguments for the
+design of each part will be presented.
 
 \subsection{Shooting Mechanism}
 When it comes to the shooting mechanism it needs to be able to shoot at least
