--- a/sections/Design/RepresentationScheme.tex
+++ b/sections/Design/RepresentationScheme.tex
@@ -1,1 +1,32 @@
 \chapter{Representation Scheme}
+When tracking the target \name needs data in order to do so. This data comes
+from the camera and ultrasonic sensors in the form of a distance and an angle.
+This data is relative to the turret, which means that in coordinate system it
+would be in (0,0). To get the current position of the target an x and a y
+coordinate is calculated by multiplying the distance with $sin(a)$ to get the x coordinate and
+$cos(a)$ to get the y coordinate, where a is the angle. This is because \name is
+centered around the y-axis. When The turret has a number of points, a vector is
+calculated to get the distance that the target has travelled. This vector is
+then divided by the time it takes the target to travel the distance, to get a new vector that represnts the
+velocity of the target in $\frac{cm}{ms}$. This vector is then multiplied by a
+number of miliseconds to get a point where the target is going to be in the
+future. To get the angle to this point the following formulas are used:
+$a_{positive}=90+(tan^{-1}(\frac{y_{pos}}{x_{pos}}))*(-1)$ and
+$a_{negative}=(90-(tan^{-1}(\frac{y_{pos}}{x_{pos}})*(-1))*(-1)$. The reason for
+using two different formulas to calculate the angle is that the formulas output
+the angle that \name should turn to and not how many degrees it should turn.
+this means that the first formula only gives the right output when the point is
+in the positive half of the coordinate system and the second only gives the
+right output when the point is in the negative half.
+
+When \name has turned to the desired angle it needs to angle itself vertically
+based on the distance to the target. This distance is calculated using
+pythagoras theorem. To calculate the angle the following function is used:
+$a_{vertical}=| 0.2573*distance-22.85 |$.
+This function comes from a trendline that was extrapolated from a set of test
+data, where the angle was plotted against how far the projectile travelled.
+\name also needs to know when to shoot in order to hit the target this is
+calculated by subtracting the value of \autoref{TimeEq} which is described in
+\autoref{ProjMotion}, from the time it takes the target to get to the desired
+point, which is calculated from the velocity vector. This gives the time where
+\name needs to shoot to be able to hit the target.
