--- a/sections/Design/RepresentationScheme.tex
+++ b/sections/Design/RepresentationScheme.tex
@@ -19,6 +19,8 @@ this means that the first formula only gives the right output when the point is
 in the positive half of the coordinate system and the second only gives the
 right output when the point is in the negative half.\nl
 
+\fix{indsæt forklarende figur af koordinatsystem}{}
+
 When \name has turned to the desired angle it needs to angle itself vertically
 based on the distance to the target. This distance is calculated using
 pythagoras theorem. To calculate the angle the following function is used:\\
