--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -271,7 +271,10 @@ given its parents.}
 \end{minipage}
 \end{center}
 
-This assumption and the connections described above, allows us to find
+This means that if the number of parents each node has is low the number of
+variables that is affected by one another is small. This means that the fewer
+parents each node has the fewer probabilities need to be specified.
+With this assumption and the connections described above, we are able to find
 the conditional probabilities of the belief network.
 
 \subsection{Hidden Markov Model}
