--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -32,7 +32,7 @@ constantly in order to keep the system running. A feature often found in
 will not work if the deadlines are broken \citep[Chap 1]{Realtime}. Using the
 previous example, it is clear that the system would not be able to function since a failure to complete
 the task may result in the wheels locking which in turns causes an accident.
-\textbf{Aperiodic} tasks are those which only activates in case certain events
+\textbf{Aperiodic} tasks are those which only activates when case certain events
 occur, ie. not in regular intervals. Consider for example a task that should
 be activated in case of errors.\nl
 
