--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -21,6 +21,10 @@
 
 \part{Design}
 \input{sections/Design/Design.tex}
+
+\part{Implementation}
+\input{sections/Implementation/Implementation.tex}
+
 \part{Testing}
 %Physics of shooting
 %Turret design choises
