--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -39,12 +39,14 @@ mean that in case of a miss it would most likely not be able to try again.\nl
 
 The spinning wheel was considered, since it is able to lauch projectile with
 great force and it can be reloaded. It utilizes the same principle as a tennis
-ball launcher, two wheels placed side by side spinning in opposite directions, with the projectile pushed through.\fix{add sketch for a
-tennis ball launcher design}{sketch}
+ball launcher, two wheels placed side by side spinning in opposite directions, with the projectile pushed through.
+
+\figx[0.6]{tennisball}{A sketch of the spinning wheel design.} 
+
 When trying to build this design it was determined that the available motors was
 not powerfull enough to deliver the necessary momentum for launching a
 projectile, not even with a gearing. Another factor is that the wheels
-available was made of soft rubber, which absorbs a lot of the for when the
+available was made of soft rubber, which absorbs a lot of the force when the
 projectile is pushed through. For this Design to work the best the wheels
 need to be made of a hard material that does not absorb the force from the
 motor and has a lot of friction, which makes it easier for the wheels to
@@ -54,7 +56,10 @@ The piston design uses a piston that pushes the projectile
 trough a mouth piece that clamps around it. This means that until enough force
 has been applied to the projectile it is held in the mouth piece. When enough
 force has been applied by the piston, the projectile will be forced out at high
-speed.\fix{Add sketch for piston launcher}{sketch}
+speed.
+
+\figx[0.6]{piston}{A sketch of the piston design.}
+
 This design has several advantages, Lego Technic has a ball launcher which can
 store several small ball projectiles. This allows us to have an easily
 reloadable and fast firing cannon, which can hold up to 6 shots.\nl
