- Starting to read all the source and adding fixes

--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -2,7 +2,8 @@
   title={Embedded system design: a unified hardware/software approach},
   author={Vahid, Frank and Givargis, Tony},
   journal={Department of Computer Science and Engineering University of California},
-  year={1999}
+  year={1999},
+  url={https://class.ee.washington.edu/474/ecker/Resources/ESDUA.pdf}
 }
 
 @article{Realtime,
@@ -52,7 +53,7 @@
   author = {Barr Group},
   title = {{Embedded Systems Glossary}},
   note = {seen 24/10/2016},
-  howpublished = {\url{http://www.barrgroup.com/Embedded-Systems/Glossary}}
+  howpublished = {\url{http://www.barrgroup.com/Embedded-Systems/Glossary-E}}
 }
 
 
