--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -2,16 +2,19 @@
  
 As \name is an autonomous turret and needs to be able to hit a moving target.
 It needs to have some intelligence in order to determine how to position itself
-to hit the target. The turret can be considered intelligent
-\citep[ch.1.1]{MIBook} when its decisions are explainable by computations.
-How intelligent it is, can be judged by:
+to hit the target. The turret can be considered intelligent when its decisions are explainable by computations.
+How intelligent it is, can be judged by \citep[ch.1.1]{MIBook}:
 
 \begin{enumerate}
-  \item If what it does is appropriate to its circumstances and goals.
-  \item If it is flexible to changing environments and changing goals.
-  \item If it learns from experience.
-  \item If it makes appropriate choices given its perceptual and computational
-  limits.
+  
+  \item \fix{If what it does is appropriate to its circumstances and goals.}{
+  Too much copy pasta}
+  \item \fix{If it is flexible to changing environments and changing goals.}{
+  Too much copy pasta}
+  \item \fix{If it learns from experience.}{ Too much copy pasta}
+  \item \fix{If it makes appropriate choices given its perceptual and
+  computational limits.
+  }{ Too much copy pasta}
 \end{enumerate}
 %See MI book, chapter 1.1 p.4
 
