--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -21,6 +21,7 @@
 
 \part{Design}
 \input{sections/Design/Design.tex}
+\input{sections/Design/SystemArch.tex}
 
 \part{Implementation}
 \input{sections/Implementation/Implementation.tex}
